<resources>
    <string name="app_name">Goods Things Take Time!</string>
    <string name="tab_last">Mi Actividad</string>
    <string name="tab_event">Eventos</string>
    <string name="tab_subjet">Materias</string>
    <string name="tab_teacher">Docentes</string>
    <string name="tab_profile">Perfil</string>
    <string name="item1">Mi Perfil</string>
    <string name="item2">Cerrar Sesión</string>
    <string name="nombre_">Nombre:</string>
    <string name="apellido_">Apellido:</string>
    <string name="email_">Email:</string>
    <string name="email">Email</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="fecha_">Fecha:</string>
    <string name="fechaentrega_">Fecha de entrega:</string>
    <string name="ingresar">Ingresar</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="pass_">Password:</string>
    <string name="aceptar">Aceptar</string>
    <string name="cuentanueva">Crear cuenta</string>
    <string name="ingresaremaik">Ingresar email</string>
    <string name="ingresarpass">Ingresar password</string>
    <string name="codrecuperacion">Código de recuperación</string>
    <string name="enviar">Enviar</string>
    <string name="restablecerpass">Restablecer contraseña</string>
    <string name="repetircontra">Repetir nueva contraseña</string>
    <string name="nuevopass">Nueva contraseña</string>
    <string name="miperfil">Mi perfil</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="Materias">Materias</string>
    <string name="Examenes">Exámenes</string>
    <string name="tp">Trabajos prácticos</string>
    <string name="Docentes">Docentes</string>
    <string name="repetirpass_">Repetir password:</string>
    <string name="repetirpass">Repetir password</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="nuevorecordatorio">Nuevo Recordatorio</string>
    <string name="materia">Salir</string>
    <string name="Materia_">Materia:</string>
    <string name="Hora_">Hora:</string>
    <string name="Descripcion_">Descripción:</string>
    <string name="Prioridad">Prioridad</string>
    <string name="alta">alta</string>
    <string name="normal">normal</string>
    <string name="baja">baja</string>
    <string name="Asignarhorarios">Asignar horarios</string>
    <string name="Inicio_">Inicio:</string>
    <string name="Fin_">Fin:</string>
    <string name="Mismaterias">Mis materias</string>
    <string name="Agregar">Agregar</string>
    <string name="Todos">Todos</string>
    <string name="Proritarios">Proritarios</string>
    <string name="Ir">Ir</string>
    <string name="Tpracticos">T. Prácticos</string>
    <string name="blanco"> </string>
    <string name="Restaurarcontrasena">Restaurar contraseña</string>
    <string name="MisDatos">Mis Datos</string>
    <string name="Clase_">Clase:</string>
    <string name="dospuntos__">:</string>
    <string name="momento_">Momento:</string>
    <string name="am">AM.  </string>
    <string name="pm">PM.  </string>
    <string name="Nick_">Nick:</string>
    <string name="anterior">anterior</string>
    <string name="siguiente">siguiente</string>
    <string name="title_activity_principal_menu">PrincipalMenu</string>


    <string name="docentes">Docentes</string>
    <string name="emaildoc">Email:</string>
    <string name="alias_">Alias:</string>
    <string name="buscar">Buscar</string>
    <string name="semana"> Horario  </string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="Viernes">Viernes</string>
    <string name="Jueves">Jueves</string>
    <string name="ocho">08&#8211;10</string>

    <string name="diez">10&#8211;12</string>

    <string name="doce">12&#8211;13</string>
    <string name="quince">15&#8211;17</string>

    <string name="diecisiete">17&#8211;19</string>

    <string name="diecinueve">19&#8211;21</string>


    <string name="salir">Salir</string>
    <string name="elegircolor">Seleccionar color</string>
    <string name="duracion_">Duracion:</string>
    <string name="buscardocente">Buscar por nombre o alias</string>
    <string name="descripcion">Descripción&#8230;</string>
    <string name="nombrep">Nombre&#8230;</string>
    <string name="colorelegir_">Color:</string>
    <string name="clasesh">Horario de clases</string>
    <string name="cons">Consulta</string>
    <string name="consultas">Horario de Consulta</string>
    <string name="eventos">Eventos</string>
    <string name="nuevodocente">Agregar Docente</string>
    <string name="apellidop">Apellido&#8230;</string>
    <string name="nickp">Nick&#8230;</string>
    <string name="telefonop">Teléfono&#8230;</string>
    <string name="emailp">Email&#8230;</string>
    <string name="hconsulta_">Horarios de Consulta:</string>
    <string name="hclase" />
    <string name="hclases">Horarios de Clases</string>
    <string name="nuevamateria">Nueva Materia</string>
    <string name="restablecer">Restablecer</string>
    <string name="Guardarm">Guardar Materia</string>
    <string name="Continuar">Continuar</string>
    <string name="borrar">Borrar</string>
    <string name="ir"><![CDATA[>]]></string>
    <string name="sra">Sr/a.ㅤ</string>
    <string name="Alias">alias</string>
    <string name="aliasdoc">Aliasㅤ</string>
    <string name="telefonodoc_">Teléfono:ㅤ</string>
    <string name="emaildocc_">Email:ㅤ</string>
    <string name="matdoc_">Materia:ㅤ</string>
    <string name="editdocente" />
    <string name="cambiarmateria_">Cambiar materia a:</string>
    <string name="dicta_">Dicta...</string>
    <string name="alerta">Atención... los siguientes docentes y/o  eventos relacionados a esta materia se perderán...</string>
    <string name="palta">Alta</string>
    <string name="pmedia">Media</string>
    <string name="pbaja">Baja</string>
    <string name="claseevento_">Clase de evento:</string>
    <string name="etp">Examen</string>
    <string name="nuevoevento">Nuevo Evento</string>
    <string name="temario_">Temario:</string>
    <string name="Atrás" />
    <string name="atras">Atrás</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
