<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".fragments.UserFragment">

 <LinearLayout

     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
     android:orientation="vertical">

  <EditText
      android:id="@+id/etidUsuario"
      android:layout_width="1dp"
      android:layout_height="1dp"
      android:layout_marginTop="52dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:visibility="invisible" />

  <TextView
      android:id="@+id/textView21"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/habibi"
      android:text="@string/Nick_"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/etnickperfil"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="7dp"
      android:ems="10"
      android:fontFamily="@font/habibi"
      android:inputType="textPersonName"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <TextView
      android:id="@+id/textView19"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/habibi"
      android:text="@string/email"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/etmailperfil"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:fontFamily="@font/habibi"
      android:inputType="textEmailAddress"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <TextView
      android:id="@+id/textView18"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/habibi"
      android:text="@string/pass_"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/etpassperfil1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:fontFamily="@font/habibi"
      android:inputType="textPassword"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <TextView
      android:id="@+id/textView20"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/habibi"
      android:text="@string/repetirpass"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/etpass2perfil"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:fontFamily="@font/habibi"
      android:inputType="textPassword"
      android:textAlignment="center"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <Button
      android:id="@+id/btneditarperfil"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:backgroundTint="@color/colorDark"
      android:fontFamily="@font/habibi"
      android:text="@string/aceptar"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />

  <Button
      android:id="@+id/btncancelarperfil"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:background="@color/colorGray"
      android:backgroundTint="@color/colorNone"
      android:fontFamily="@font/habibi"
      android:text="@string/cancelar"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="18sp" />
 </LinearLayout>

</FrameLayout>