<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".SingUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorDark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorNone"
            android:fontFamily="@font/habibi"
            android:text="@string/MisDatos"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etnickregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorGray"
            android:ems="10"
            android:fontFamily="@font/habibi"
            android:hint="Tu Nick"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etmailregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorGray"
            android:ems="10"
            android:fontFamily="@font/habibi"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etpass1registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorGray"
            android:ems="10"
            android:fontFamily="@font/habibi"
            android:hint="@string/ingresarpass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etpass2registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@color/colorGray"
            android:ems="10"
            android:fontFamily="@font/habibi"
            android:hint="@string/repetirpass"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="18sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/etidregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorGray"
            android:ems="10"
            android:fontFamily="@font/habibi"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="18sp"
            android:visibility="invisible"
            android:layout_marginTop="32dp" />

        <Button
            android:id="@+id/btnaceptarregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/habibi"
            android:text="@string/aceptar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btncancelarregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/habibi"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>